--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-responsive",
-  "version": "1.2.0",
+  "version": "1.0.0",
   "scripts": {
     "build": "gulp prebuild && tsc",
     "test": "jest"
@@ -18,14 +18,14 @@
   "private": false,
   "devDependencies": {
     "@testing-library/jest-dom": "^4.0.0",
-    "@testing-library/react": "^8.0.1",
+    "@testing-library/react": "^9.1.3",
     "@types/jest": "^24.0.15",
     "@types/react": "16.8.x",
     "gulp": "4.0.x",
     "gulp-clean": "^0.4.0",
     "jest": "^24.8.0",
-    "react": "16.8.x",
-    "react-dom": "16.8.x",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "ts-jest": "^24.0.2",
     "typescript": "^3.5.2"
   },
