--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@testing-library/jest-dom": "^4.0.0",
     "@testing-library/react": "^9.1.3",
     "@types/jest": "^24.0.15",
-    "@types/react": "16.8.x",
+    "@types/react": "^16.9.0",
     "gulp": "4.0.x",
     "gulp-clean": "^0.4.0",
     "jest": "^24.8.0",
